--- a/i18n/locales/it.json
+++ b/i18n/locales/it.json
@@ -1,3 +1,60 @@
 {
-  "welcome": "Bonjorno"
+  "contact": "Contacto",
+  "functionalities": "Funktionen",
+  "team": "Team",
+  "insights": "Einblicke",
+  "home_hero_title": "La piattaforma per la precettazione digitale della vostra città o destinazione!",
+  "home_hero_subtitle": "Create, configurate e coinvolgete i vostri visitatori a vostro piacimento!",
+  "cta_app_test": "Prova l'applicazione",
+  "cta_become_partner": "Diventare partner",
+  "cta_app_download": "Scarica l'applicazione",
+  "cta_more_details": "Piu' dettagli",
+  "app_features_title": "Un'app per l'esperienza completa dell'ospite!",
+  "app_features_individual_exploration_title": "Scoperte individuali",
+  "app_features_individual_exploration_text": "Suggerimenti personalizzati basati sulle preferenze selezionate e su altri dati come il tempo e l'ora.",
+  "app_features_thematic_tours_title": "Tour tematici",
+  "app_features_thematic_tours_text": "Una guida personale per ciascuno dei vostri visitatori, che conduce e racconta storie interessanti lungo il percorso.",
+  "app_features_events_and_offers_title": "Eventi e altre offerte speciali",
+  "app_features_events_and_offers_text": "Fornisce informazioni sui prossimi eventi e pubblicizza le offerte speciali in corso. Qualcuno è stato morso? L'app vi porta direttamente a destinazione!",
+  "sum_features_for_cities_title": "Per le città/destinazioni",
+  "sum_features_for_cities_text": "Citybot offre uno strumento di amministrazione in cloud per gestire singole attrazioni, tour, eventi e altre offerte speciali sotto un unico tetto.",
+  "sum_features_full_control_title": "Controllo completo",
+  "sum_features_full_control_text": "Avete il pieno controllo e una panoramica completa dei vostri contenuti. Solo voi decidete quali contenuti presentare e come.",
+  "sum_features_analytics_title": "Analisi dei dati",
+  "sum_features_analytics_text": "Imparate dai dati dei vostri visitatori e migliorate di conseguenza le vostre offerte.",
+  "sum_features_cost_title": "Conveniente e flessibile. Risparmio garantito!",
+  "sum_features_cost_text": "Perché sviluppare una soluzione propria quando potete ottenere una licenza flessibile a una frazione dei costi di sviluppo e manutenzione? Noi forniamo la tecnologia, voi fornite i migliori contenuti! Una divisione del lavoro efficiente al massimo livello!",
+  "sum_features_for_visitors_title": "Per i visitatori",
+  "sum_features_for_visitors_text": "CityBot offre un'app mobile per scoprire la vostra città o destinazione in diversi modi.",
+  "sum_features_wholistic_experience_title": "Esperienza del visitatore completamente integrata",
+  "sum_features_wholistic_experience_text": "Un’unica app per l’intero viaggio. Dalla pianificazione, alla scelta, alla navigazione, fino alle informazioni dettagliate in loco, senza dover saltare continuamente tra siti web, Google Maps e altri strumenti.",
+  "sum_features_personalized_title": "Personalizzato",
+  "sum_features_personalized_text": "Suggerimenti personalizzati basati sulle preferenze dell’utente e su una varietà di opzioni diverse. Naturalmente supportati dall’intelligenza artificiale!",
+  "sum_features_multi_destination_title": "Un'app, molte città/destinazioni",
+  "sum_features_multi_destination_text": "Evitate ai vostri visitatori di dover installare un’altra app. Entrate a far parte di una rete di città/destinazioni e fatevi scoprire da altri utenti.",
+  "cmt_features_headline_title": "La tua città/destinazione in digitale",
+  "cmt_features_suptitle": "Un flusso di lavoro migliore",
+  "cmt_features_subtitle": "Crea e gestisci attrazioni, tour, eventi e offerte speciali con il sistema di gestione dei contenuti (CMS).",
+  "cmt_features_multimedia_title": "Multimediale.",
+  "cmt_features_multimedia_text": "Presentazione tramite testo, video e audio. Presto in arrivo anche realtà aumentata (AR)!",
+  "cmt_features_pois_title": "Attrazioni individuali.",
+  "cmt_features_pois_text": "Sono i piccoli segreti a rendere una visita indimenticabile. Crea attrazioni che valgono la pena di essere visitate da sole. Inserisci qui i consigli più nascosti e preziosi che nessun altro conosce.",
+  "cmt_features_tours_title": "Tour.",
+  "cmt_features_tours_text": "Combina attrazioni individuali in percorsi tematici.",
+  "cmt_features_events_title": "Eventi e offerte speciali.",
+  "cmt_features_events_text": "Collega eventi in programma e altre offerte speciali di fornitori terzi.",
+  "cmt_features_offers_title": "Offerte.",
+  "cmt_features_digital_branding_title": "Crea il tuo brand digitale.",
+  "cmt_features_digital_branding_text": "Configura colori e grafiche per personalizzare l’interfaccia dell’app mobile in base al tuo brand. È come avere una tua app personale, ma senza tutto il caos della programmazione!",
+  "stats_headline": "In numeri",
+  "stats_nr_visited_pois_title": "Attrazioni visitate",
+  "stats_nr_visited_pois_text": "1000+",
+  "stats_suggestions_title": "Suggerimenti personalizzati forniti",
+  "stats_suggestions_text": "130.000+",
+  "stats_finished_tours_title": "Tour completati",
+  "stats_finished_tours_text": "200+",
+  "stats_average_rating_title": "Valutazione media",
+  "stats_average_rating_text": "4.2+ ⭐",
+  "stats_nr_crashes_title": "Crash di sistema fatali",
+  "stats_nr_crashes_text": "0"
 }
