--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -1,8 +1,9 @@
 {
+  "loading": "Chargement",
   "contact": "Kontakt",
-  "functionalities": "Funktionen",
-  "team": "Team",
-  "insights": "Einblicke",
+  "functionalities": "Fonctionnalités",
+  "team": "Équipe",
+  "insights": "Aperçus",
   "home_hero_title": "La plateforme pour la présence numérique de votre ville ou destination !",
   "home_hero_subtitle": "Créez, configurez et engagez vos visiteurs à votre guise !",
   "cta_app_test": "Tester l'application",
@@ -56,5 +57,20 @@
   "stats_average_rating_title": "Note moyenne",
   "stats_average_rating_text": "4.2+ ⭐",
   "stats_nr_crashes_title": "Pannes système fatales",
-  "stats_nr_crashes_text": "0"
+  "stats_nr_crashes_text": "0",
+  "testimonials_title": "Ce que nos clients disent de nous.",
+  "testimonials_customer_support_title": "Support client efficace",
+  "testimonials_customer_support_text": "«Le support client de CityBot est très courtois et serviable. L'équipe de CityBot m'a accompagné de A à Z dans la création de nouveaux parcours.»",
+  "testimonials_citydev_title": "Responsable du développement urbain",
+  "testimonials_broad_offerings_title": "Offre variée",
+  "testimonials_broad_offerings_text": "«Nos visiteurs sont ravis de la diversité des informations disponibles spontanément dans l'application !»",
+  "testimonials_ceo_title": "Directeur général",
+  "footer_slogan": "Des solutions touristiques de nouvelle génération intégrées",
+  "contact_form_title": "Vous êtes intéressé par une éventuelle collaboration ? Écrivez-nous et nous vous contacterons immédiatement pour discuter de vos possibilités lors d’un premier échange sans engagement.",
+  "app_download_title": "Télécharger l’application pour votre OS",
+  "team_title": "Rencontrez l’équipe",
+  "team_subtitle": "Nous nous engageons pour la présence numérique de votre ville/destination.",
+  "blog_by_topic_filter": "Par thème :",
+  "blog_topic_all": "Tous",
+  "blog_no_posts": "Aucune entrée trouvée"
 }
